--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,7 +58,7 @@ jobs:
               uses: docker/login-action@v2
               with:
                   username: ${{ secrets.DOCKER_USERNAME }}
-                  password: ${{ secrets.TOKEN }}
+                  password: ${{ secrets.DOCKER_TOKEN }}
 
             - name: Docker push
               uses: docker/build-push-action@v6
